[package]
name = "camo-rs"
description = "An HTTP proxy for asset files."
authors = ["Dennis Schubert <mail@dennis-schubert.de>"]
repository = "https://github.com/denschub/camo-rs"
version = "1.1.0-dev"
edition = "2021"

default-run = "camo"

[dependencies]
axum = "0.6"
clap = { version = "4", features = ["cargo", "derive", "env", "wrap_help"] }
hex = "0.4"
hmac = "0.12"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
sha-1 = "0.10"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
url = "2"

[dev-dependencies]
reqwest = "0.11"
wiremock = "0.5"
